Today's python api learning

--- a/python_notebooks/Graphing_Dataset.ipynb
+++ b/python_notebooks/Graphing_Dataset.ipynb
@@ -3,7 +3,13 @@
   {
    "cell_type": "markdown",
    "id": "67cbbb42",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "# Project Start\n",
     "This notebook is just for making a simple graph using an easy to use dataset found on kaggle: https://www.kaggle.com/datasets/shilpikulshrestha/books-sold-dataset?resource=download\n",
